--- a/frontend/host-app/package.json
+++ b/frontend/host-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-frontend",
+  "name": "host-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.7",
-    "graphql": "^16.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
